--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" href="styling.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Yummmy inn</title>
 </head>
+
 <body>
-    
+    <h1 class="head">Yummmy inn</h1>
+    <div class="mainImg">
+        <img class="bgimg" src="./assets/bgimg.jpg" alt="bgimg">
+        <h1 class="heading">Plan your meal <br> with your favourite Ingredients</h1>
+    </div>
+    <div class="search">
+        <input type="text" id="search" placeholder="Search your category">
+        <button id="searchbtn" >Search</button>
+    </div>
+    <div class="centerportion">
+        <div id="Ingredients">
+            <img src="" id="ingredientimg" alt="ingredients">
+            <h1 id="heading2">Ingredients</h1>
+        </div>
+        <div class="list" id="list">
+            <div>
+                <h1>Ingredients</h1>
+                <br>
+                <ul >
+                    <li class="I1">Mushroom</li>
+                    <li class="I1">Onion</li>
+                    <li class="I1">Garlic</li>
+                    <li class="I1">Vegetable oil</li>
+                    <li class="I1">Sour cream</li>
+                    <li class="I1">Black powder</li>
+                </ul>
+            </div>
+          
+        </div>
+    </div>
+    <div id="searchArea" >
+        <div id="searchList" >
+
+        </div>
+    </div>
+    <h1 class="subtitle">Random Dishes</h1>
+
+    <div id="randomList">
+ 
+    </div>
 </body>
 <script src="index.js"></script>
+
 </html>
